force-app/main/default/objects/DA_Policy_KPI__c/DA_Policy_KPI__c.object-meta.xml
<CustomObject>
    <description>Child of DA Policy (BRD 20.2). A KPI with its half-day and full-day targets.</description>
    <label>DA Policy KPI</label>
    <nameField>
        <displayFormat>DAK-{00000}</displayFormat>
        <label>DA Policy KPI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DA Policy KPIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>