force-app/main/default/objects/DA_Policy_KPI__c/fields/DA_Policy__c.field-meta.xml
<CustomField>
    <fullName>DA_Policy__c</fullName>
    <label>DA Policy</label>
    <referenceTo>DA_Policy__c</referenceTo>
    <relationshipLabel>DA Policy KPIs</relationshipLabel>
    <relationshipName>DA_Policy_KPIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>