force-app/main/default/objects/DA_Policy_KPI__c/fields/Half_Day_Target__c.field-meta.xml
<CustomField>
    <fullName>Half_Day_Target__c</fullName>
    <label>Half Day Target</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>