force-app/main/default/objects/DA_Policy_KPI__c/fields/KPI_Metric__c.field-meta.xml
<CustomField>
    <fullName>KPI_Metric__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI</label>
    <referenceTo>KPI_Metric__c</referenceTo>
    <relationshipName>DA_Policy_KPIs</relationshipName>
    <type>Lookup</type>
</CustomField>